// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Trigger Element Renders trigger element and appends action props 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  border-radius: 2px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
}

.c1:hover {
  background-color: #049;
  color: #fff;
}

.c1:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c1:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
  class="c0"
>
  <button
    aria-label="Top Popover"
    class="c1"
    color="primary"
    type="button"
  >
    Trigger Button
  </button>
</div>
`;

exports[`Popover Trigger Element renders with FocusLock 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      aria-label="Top Popover"
      type="button"
    >
      Trigger Button
    </button>
  </div>
</DocumentFragment>
`;

exports[`Popover UI Positioning Bottom 1`] = `
.c3 {
  background-color: #fff;
  color: #001833;
  border-radius: 6px;
}

.c1 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c1 * {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  width: 8px;
  height: 8px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c4[data-placement*='left'] {
  border-color: transparent #c0cad5 #c0cad5 transparent;
}

.c4[data-placement*='right'] {
  border-color: #c0cad5 transparent transparent #c0cad5;
}

.c4[data-placement*='top'] {
  border-color: transparent transparent #c0cad5 #c0cad5;
}

.c4[data-placement*='bottom'] {
  border-color: #c0cad5 #c0cad5 transparent transparent;
}

.c0 {
  display: inline-block;
  padding: 8px;
  width: 400px;
  border-radius: 6px;
  box-sizing: border-box;
  max-width: 400px;
  width: 100%;
  z-index: 102;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0 0 0 1px #c0cad5,0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08),0 16px 16px 0 rgba(0,0,0,0.08);
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 6px;
}

<div
  aria-describedby="dialog-description-1"
  class="c0"
  data-placement="bottom"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="400"
>
  <div
    class="c1"
  >
    <section
      class="c2"
      data-testid="popover-content-container"
      tabindex="-1"
      width="400"
    >
      <div
        class="c3"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          class=""
        >
          <p>
            Hello there!
          </p>
          <button>
            Click me to close button!
          </button>
        </div>
      </div>
    </section>
  </div>
  <div
    class="c4"
    color="background.lightest"
    data-placement="bottom"
    data-testid="popover-arrow"
    style="top: 3px; left: 0px;"
  />
</div>
`;

exports[`Popover UI Positioning Bottom End 1`] = `
.c3 {
  background-color: #fff;
  color: #001833;
  border-radius: 6px;
}

.c1 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c1 * {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  width: 8px;
  height: 8px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c4[data-placement*='left'] {
  border-color: transparent #c0cad5 #c0cad5 transparent;
}

.c4[data-placement*='right'] {
  border-color: #c0cad5 transparent transparent #c0cad5;
}

.c4[data-placement*='top'] {
  border-color: transparent transparent #c0cad5 #c0cad5;
}

.c4[data-placement*='bottom'] {
  border-color: #c0cad5 #c0cad5 transparent transparent;
}

.c0 {
  display: inline-block;
  padding: 8px;
  width: 400px;
  border-radius: 6px;
  box-sizing: border-box;
  max-width: 400px;
  width: 100%;
  z-index: 102;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0 0 0 1px #c0cad5,0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08),0 16px 16px 0 rgba(0,0,0,0.08);
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 6px;
}

<div
  aria-describedby="dialog-description-1"
  class="c0"
  data-placement="bottom-end"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="400"
>
  <div
    class="c1"
  >
    <section
      class="c2"
      data-testid="popover-content-container"
      tabindex="-1"
      width="400"
    >
      <div
        class="c3"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          class=""
        >
          <p>
            Hello there!
          </p>
          <button>
            Click me to close button!
          </button>
        </div>
      </div>
    </section>
  </div>
  <div
    class="c4"
    color="background.lightest"
    data-placement="bottom-end"
    data-testid="popover-arrow"
    style="top: 3px; left: 0px;"
  />
</div>
`;

exports[`Popover UI Positioning Bottom Start 1`] = `
.c3 {
  background-color: #fff;
  color: #001833;
  border-radius: 6px;
}

.c1 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c1 * {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  width: 8px;
  height: 8px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c4[data-placement*='left'] {
  border-color: transparent #c0cad5 #c0cad5 transparent;
}

.c4[data-placement*='right'] {
  border-color: #c0cad5 transparent transparent #c0cad5;
}

.c4[data-placement*='top'] {
  border-color: transparent transparent #c0cad5 #c0cad5;
}

.c4[data-placement*='bottom'] {
  border-color: #c0cad5 #c0cad5 transparent transparent;
}

.c0 {
  display: inline-block;
  padding: 8px;
  width: 400px;
  border-radius: 6px;
  box-sizing: border-box;
  max-width: 400px;
  width: 100%;
  z-index: 102;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0 0 0 1px #c0cad5,0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08),0 16px 16px 0 rgba(0,0,0,0.08);
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 6px;
}

<div
  aria-describedby="dialog-description-1"
  class="c0"
  data-placement="bottom-start"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="400"
>
  <div
    class="c1"
  >
    <section
      class="c2"
      data-testid="popover-content-container"
      tabindex="-1"
      width="400"
    >
      <div
        class="c3"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          class=""
        >
          <p>
            Hello there!
          </p>
          <button>
            Click me to close button!
          </button>
        </div>
      </div>
    </section>
  </div>
  <div
    class="c4"
    color="background.lightest"
    data-placement="bottom-start"
    data-testid="popover-arrow"
    style="top: 3px; left: 0px;"
  />
</div>
`;
